Add support for NetlifyCMS.

--- a/content/01-01-2017.md
+++ b/content/01-01-2017.md
@@ -1,13 +1,14 @@
 ---
 title: "Bold Mage"
-cover: "https://unsplash.it/400/300/?random?BoldMage"
-date: "01/01/2017"
+cover: "8.jpg"
+date: "2017-01-01"
 category: "tech"
 tags:
     - programming
     - stuff
     - other
 ---
+
 # Quanto et ius coniunctis urbes
 
 ## Sedisti civiliter
@@ -16,7 +17,7 @@ Lorem **markdownum** Ixione palus **semper peritura barbaque** in aureus
 obliquum erigitur gemmae utque cur natus, aera supplice de nudae. Manus
 ambrosiam tendens, saecula tenet, conponere et ense et cucurri. Tantique
 animalia praeceps Meleagre greges venisse corpore et ignara, umquam ipse? Quam
-*Talibus ausis*.
+_Talibus ausis_.
 
 ## Vultusque subsequitur Pallas regis datis inde animaque
 
