--- a/content/01-02-2017.md
+++ b/content/01-02-2017.md
@@ -1,13 +1,14 @@
 ---
 title: "The Fallen Time"
-cover: "https://unsplash.it/400/300/?random?TheFallenTime"
-date: "01/02/2017"
+cover: "7.jpg"
+date: "2017-02-01"
 category: "another one"
 tags:
     - test
     - something
     - tagging
 ---
+
 # Autolyci eminus retenta
 
 ## Hoc domum solitos veteremque nostrum
@@ -16,16 +17,15 @@ Lorem markdownum huc suo ara, dubites celeri mihi bicolor. Secuti non? Suo opus
 quales dant, puppim hanc!
 
 ```js
-    enterprise /= mp_operating_quad;
-    dsl_runtime.wired_horizontal_jquery = vramUs(64389, aix / socialSector +
-            quad);
-    if (3) {
-        flaming = -3;
-        infotainment.horseThreadColumn(copySnippet, 5, day);
-    } else {
-        num_network_cpa = firewireAluExbibyte + denial_virtual_logic + program;
-    }
-    scanner(1, ram_wddm(map, reader + 3, ole_install));
+enterprise /= mp_operating_quad;
+dsl_runtime.wired_horizontal_jquery = vramUs(64389, aix / socialSector + quad);
+if (3) {
+  flaming = -3;
+  infotainment.horseThreadColumn(copySnippet, 5, day);
+} else {
+  num_network_cpa = firewireAluExbibyte + denial_virtual_logic + program;
+}
+scanner(1, ram_wddm(map, reader + 3, ole_install));
 ```
 
 ## In nunc
@@ -39,7 +39,7 @@ Infelix ait eadem. Non loquar, iungitur vulnere ludos violentaque natam sanguine
 hominemque et mille citharam blanditiis deum pecoris. Vibrabant et crimina
 iterum: et nisi victa quietis litore? Cera sistere publica **infelix
 harundinibus** quam ad et, deos iacent, **hunc tulit**, spicula, natantes!
-Melioribus imperat fugit *me natum* quem sequitur nocturnae moras tantummodo et
+Melioribus imperat fugit _me natum_ quem sequitur nocturnae moras tantummodo et
 secus aethera umentes vidisse terrae sororum laboris, fraterno.
 
 ## Perpetiar lacrimas Non dare
@@ -52,7 +52,7 @@ dolore, thyrso iuvit quo ardere est requiem laesaque in dedimus?
 
 Est illo Osiris aevo, et **dextrae** quoque et, illa. Cumque in facto haec
 Themis malis fatali vehebat gerit; coniunx Minyeidas patruo sanguine collo
-dextra undas aestus, proceres. Falso ut relictas me ara illa *expulit*
+dextra undas aestus, proceres. Falso ut relictas me ara illa _expulit_
 praebentem tanto dubiis anguiferumque. Fata vidit [suam caede
 mirere](http://nare.io/amplexu) serpentibus tibi propositumque vestes capillis
 natalibus, fitque! Verba Siphnon, arcanaque vicina, Cycnum mox suos coniunx
