--- a/content/02-03-2017.md
+++ b/content/02-03-2017.md
@@ -1,11 +1,12 @@
 ---
 title: "Random project 4 With Super Long Title Phase One"
-cover: "https://unsplash.it/1152/300/?random?SuperLong"
+cover: "4.jpg"
 category: "random"
-date: "02/03/2017"
+date: "2017-03-02"
 tags:
     - say hi
 ---
+
 # Artificem honorati ore temperat Lycus quam antiquum
 
 ## Mendaci pinu ipsi nunc
@@ -26,16 +27,16 @@ tela**.
 ## Facta huic laboras matris tandem scelus
 
 Per praesuta occupat stratum, manuque te femina magni Nelidae. [Cauda
-lacrimisque](http://www.in.io/) sua nec quoque *prodiga*: more te aera est fas
-ut utrumque omnes, fugae sua Telamone. Scilicet indulgere *dat terunt quam*
+lacrimisque](http://www.in.io/) sua nec quoque _prodiga_: more te aera est fas
+ut utrumque omnes, fugae sua Telamone. Scilicet indulgere _dat terunt quam_
 corpora, ad non Canentem gressu feliciter lapillis caede frequentes tibi nostro?
 Agmine in Phlegon illo oblita, ait quis negare orbem, prosunt tamen, praesentit
 iussae Babylonius finita!
 
 Invictumque marmoreis simulatas solverat saevique nondum depositoque **ramisque
-inclusa**, dissiluit hoc malis, *simulacra*? Cum cupido alis. Ulmi redit
+inclusa**, dissiluit hoc malis, _simulacra_? Cum cupido alis. Ulmi redit
 adpellatque tellus, soror robore sequerere cuspidis quae putares! Mihi solidas
-sed tyranni tecta pennas virgine, unus aufer, *Oete* neve femina, vos quid.
+sed tyranni tecta pennas virgine, unus aufer, _Oete_ neve femina, vos quid.
 Oscula dignior.
 
 ## Corpore motae iam
