--- a/content/02-04-2017.md
+++ b/content/02-04-2017.md
@@ -1,15 +1,16 @@
 ---
 title: "The Fairy's Witches"
-cover: "https://unsplash.it/1152/300/?random?FaityWitch"
+cover: "3.jpg"
 category: "something"
-date: "02/04/2017"
+date: "2017-04-02"
 ---
+
 # Eram mora tuas in inter ferens caterva
 
 ## Ait oculos
 
 Lorem markdownum. Dedit caput, saxa lenis adhibere negarunt substiterat et ab
-testes moderantum. Somno curas obscurum, et *regna spectare* quaeque tot arte
+testes moderantum. Somno curas obscurum, et _regna spectare_ quaeque tot arte
 Minyeia. Labens Actaeis potentior et **in visa Arcadiae** adfusaque et voto. In
 silendo pares sed noceat sceptri Phoenix, qui verso [ille
 erigitur](http://de-fuit.io/populorum.php): iacet confessus ibi lacusque.
@@ -25,7 +26,7 @@ Quae nova: campis peragebant omnemque direptos ipsi ore erat volucris neque;
 formae. Trepidare figuram minanti longa, nec seris, ibat plus madent, nec compos
 atque iuvenis dimotis; ferunt. An urbes ab deae Pentheus erit: non capere cui
 ausim fallit omnia et estque caede. Meas haec una ab est iter exstantibus illo
-*summae flecti*.
+_summae flecti_.
 
 ## Tyrios inquit
 
@@ -41,11 +42,11 @@ Nusquam sagitta ad ferre, ore terras mihi sopor mundi; tanti terga abstulit; tum
 terreris **adhuc sinistro** ad. Pirithoi certa commemorare Herse ponti
 mitissima, hanc nec sonat illo vocandus placido salus.
 
-1. Clamant donec
-2. Posuitque et relicto parent
-3. Mediis est Siculo eveniet de dictis
-4. Ripae formaque devexaque pecudes domum vidistis proles
-5. Dumque moenia amnes coniugium dumque in saxa
+1.  Clamant donec
+2.  Posuitque et relicto parent
+3.  Mediis est Siculo eveniet de dictis
+4.  Ripae formaque devexaque pecudes domum vidistis proles
+5.  Dumque moenia amnes coniugium dumque in saxa
 
 Si patres terram! Mille habenas tractataque forte. Tenebris viscera gelidos
 fuit? Hamos deinde longique quisquis pugnat moriens, nec Tmolo **ferebat**.
