--- a/content/17-03-2017.md
+++ b/content/17-03-2017.md
@@ -1,8 +1,8 @@
 ---
 title: "The Butterfly of the Edge"
-cover: "https://unsplash.it/1152/300/?random?TheButterflyoftheEdge"
+cover: "2.jpg"
 category: "tech"
-date: "17/03/2017"
+date: "2017-03-17"
 tags:
     - programming
     - more tags
@@ -11,13 +11,14 @@ tags:
     - stuff
     - other
 ---
+
 # Hanc indeploratum seram Amphitryoniadae tremulis pauperque manum
 
 ## Cognoscenti audeat ulterius sublimia terga potiorque saxo
 
 Lorem markdownum, quid fuerat Procne saxo asperitas variarum Iuno humili
 sermone! Tibi Oileos [unda](http://nuncet.org/hic-gens.php), lux celeberrima
-heros inlustre Copia, *humo*: huius.
+heros inlustre Copia, _humo_: huius.
 
 Ecce ruris resupino pugnat nudaque certum piacula componar advertite homines
 terris: iam. Huc amnem cura lustrabere pro videt ferat lupi quoque tepido
@@ -27,16 +28,16 @@ amplexa aures es subito ad sagittis silvis lacrimans.
 
 Penetravit velocius. [Sed usum notissima](http://quamlaevum.com/parnasia) pinus
 monimenta populo dubitavit latices quoque, nido parant? Argumenta regem
-pererrant avellere ore *grates* stirpem. Toto potes, non malo est argumentum
+pererrant avellere ore _grates_ stirpem. Toto potes, non malo est argumentum
 gyrum, nec cernes prosunt, [laudemur
 quis](http://www.ipse-in.org/meritosenis.html) ardescunt cervicis. Quamvis mens,
 pastae, vimine, quid urbesque vidi, quae fuit strictis radere grandaevique
 odiumque dixit; confiteorque.
 
-1. Dryades resupinum
-2. Lassus vota illos et visis liceret
-3. Per nec tenaci solitoque peto Neoptolemum vitamque
-4. Dianae minoris tum
+1.  Dryades resupinum
+2.  Lassus vota illos et visis liceret
+3.  Per nec tenaci solitoque peto Neoptolemum vitamque
+4.  Dianae minoris tum
 
 ## Ferentem natam simillimus et erat commota pacifer
 
@@ -48,12 +49,12 @@ stridentibus nocuere perque pestiferos convicti lenta instat ad adurat, veri
 nexaque mihi nulli quoque. **Sic** montis orat Turne omnes, fientque isset in
 fore spinae nulla, tuus.
 
-- In mare mixtaque tollens
-- Si vetus
-- Deorum adfata depressitque fortuna conlapsosque conorque
-- Ramum o
+* In mare mixtaque tollens
+* Si vetus
+* Deorum adfata depressitque fortuna conlapsosque conorque
+* Ramum o
 
-Iacentes sunt. *Fugio et illo*, non Nam et esse foret genu coercuit vana forcipe
+Iacentes sunt. _Fugio et illo_, non Nam et esse foret genu coercuit vana forcipe
 funeribus Achelous fugae Eurytidae moram. Tantique mei virga gestu, omnia qui
 fatale at firmat, aut est non invida totidemque fulserunt ungula. **Dignus
 apro** incubat qui! Torserat conplexa cum, Rhoetus tibi ignes crudelis marinae.
