--- a/content/23-03-2017.md
+++ b/content/23-03-2017.md
@@ -1,11 +1,12 @@
 ---
 title: "Birch in the Roses"
-cover: "https://unsplash.it/1152/300/?random?BirchintheRoses"
-date: "01/03/2017"
+cover: "1.jpg"
+date: "2017-03-01"
 category: "tech"
 tags:
     - tag
 ---
+
 # Domos primus caelum taedia
 
 ## Accipit alto fecerat mutato centauri haerent dominoque
@@ -15,9 +16,9 @@ huic, non bis, summa retemptat. Praedelassat tollitur parte capiebant lustratum
 hominem loco coniuge quota, nec aura. Cum constiterat, animos sic videre dumque
 altus **de vesper** membra blanditiis aethera orgia.
 
-1. Sicyonius color
-2. Publica animalia suoque sub
-3. Stupet eiusdem paventem meum
+1.  Sicyonius color
+2.  Publica animalia suoque sub
+3.  Stupet eiusdem paventem meum
 
 ## Supersunt Prothoenora arida moturaque fuerit demissaque aut
 
@@ -37,12 +38,12 @@ essem! Turbatque aequora remanet accepit in digitos, refert reus sanguine.
 Haec dedisset pendens quem exul medios nec fecundus unde, concursibus. Iste in
 superat, omnem cognovit nulla inpendere in silvae certatim.
 
-1. Nimium contigerat fera incipit Lichan nata
-2. Prothoenora rapti contendisse comae
-3. Colloque mitisque
-4. Utinam rogum adeunda dic ausus magnus canam
-5. In plura dubitat
-6. Vivit doceri et rexerit atque
+1.  Nimium contigerat fera incipit Lichan nata
+2.  Prothoenora rapti contendisse comae
+3.  Colloque mitisque
+4.  Utinam rogum adeunda dic ausus magnus canam
+5.  In plura dubitat
+6.  Vivit doceri et rexerit atque
 
 ## Venisse qui fortis nimis horruit ignarus quaeque
 
@@ -53,5 +54,5 @@ utinam sed, non nemo mixtos thyrsos. Inobservata subsunt.
 
 Coniuge contraxit in flagrantis et sacra Paridis pietas nymphas dextra et aequor
 erat insignia virginei medi. Acervo ferrum! Undecimus rabiemque elusam superesse
-*tantos crinibus*: bellum Iuno an celeberrima nostraque arcumque. Sive quod
+_tantos crinibus_: bellum Iuno an celeberrima nostraque arcumque. Sive quod
 inter Cynthia est gemitu crimina sis, et preces cuncta tamen?
