--- a/content/01-01-2017.md
+++ b/content/01-01-2017.md
@@ -1,12 +1,13 @@
 ---
-title: "Bold Mage"
-cover: "8.jpg"
-date: "2017-01-01"
-category: "tech"
+title: Bold Mage
+date: '2017-01-01'
+cover: /assets/0006.jpg
+slug: bold-mage
+category: tech
 tags:
-    - programming
-    - stuff
-    - other
+  - programming
+  - stuff
+  - other
 ---
 
 # Quanto et ius coniunctis urbes
