Add new frontmatter variables for additional capabilities.

--- a/content/01-01-2017.md
+++ b/content/01-01-2017.md
@@ -1,7 +1,8 @@
 ---
 title: "Bold Mage"
 cover: "8.jpg"
-date: "2017-01-01"
+datePublished: "2017-01-01"
+dateModified: "2017-01-01"
 category: "tech"
 tags:
     - programming
