--- a/content/01-02-2017.md
+++ b/content/01-02-2017.md
@@ -1,7 +1,8 @@
 ---
 title: "The Fallen Time"
 cover: "7.jpg"
-date: "2017-02-01"
+datePublished: "2017-02-01"
+dateModified: "2017-02-01"
 category: "another one"
 tags:
     - test
