--- a/content/02-03-2017.md
+++ b/content/02-03-2017.md
@@ -2,7 +2,8 @@
 title: "Random project 4 With Super Long Title Phase One"
 cover: "4.jpg"
 category: "random"
-date: "2017-03-02"
+datePublished: "2017-03-02"
+dateModified: "2017-03-02"
 tags:
     - say hi
 ---
