--- a/content/02-04-2017.md
+++ b/content/02-04-2017.md
@@ -2,7 +2,8 @@
 title: "The Fairy's Witches"
 cover: "3.jpg"
 category: "something"
-date: "2017-04-02"
+datePublished: "2017-04-02"
+dateModified: "2017-04-02"
 ---
 
 # Eram mora tuas in inter ferens caterva
