--- a/content/17-03-2017.md
+++ b/content/17-03-2017.md
@@ -2,7 +2,8 @@
 title: "The Butterfly of the Edge"
 cover: "2.jpg"
 category: "tech"
-date: "2017-03-17"
+datePublished: "2017-03-17"
+dateModified: "2017-03-17"
 tags:
     - programming
     - more tags
