--- a/content/23-03-2017.md
+++ b/content/23-03-2017.md
@@ -1,7 +1,8 @@
 ---
 title: "Birch in the Roses"
 cover: "1.jpg"
-date: "2017-03-01"
+datePublished: "2017-03-01"
+dateModified: "2017-03-01"
 category: "tech"
 tags:
     - tag
