--- a/content/01-03-2017.md
+++ b/content/01-03-2017.md
@@ -2,7 +2,8 @@
 title: "Angels of Mist"
 cover: "6.jpg"
 category: "test3"
-date: "2017-03-01"
+datePublished: "2017-03-01"
+dateModified: "2017-03-01"
 tags:
     - cheese
     - other
