Update markdown linting setup.

--- a/content/Big_Sample_Post.mdx
+++ b/content/Big_Sample_Post.mdx
@@ -1,3 +1,5 @@
+<!-- markdownlint-disable-->
+
 ---
 title: "Big Test"
 cover: "5.jpg"
@@ -11,7 +13,6 @@ tags:
   - huge
 ---
 
-# MDX Test
 
 import { SketchPicker } from "react-color";
 
@@ -29,7 +30,7 @@ You can play around with Markdown on our [live demo page](http://www.markdown-he
 
 (If you're not a Markdown Here user, check out the [Markdown Cheatsheet](./Markdown-Cheatsheet) that is not specific to MDH. But, really, you should also use Markdown Here, because it's awesome. http://markdown-here.com)
 
-##### Table of Contents
+## Table of Contents
 
 [Headers](#headers)
 [Emphasis](#emphasis)
@@ -43,8 +44,6 @@ You can play around with Markdown on our [live demo page](http://www.markdown-he
 [Horizontal Rule](#hr)
 [Line Breaks](#lines)
 [YouTube Videos](#videos)
-
-<a name="headers" />
 
 ## Headers
 
@@ -83,8 +82,6 @@ Alternatively, for H1 and H2, an underline-ish style:
 
 ## Alt-H2
 
-<a name="emphasis" />
-
 ## Emphasis
 
 ```no-highlight
@@ -104,8 +101,6 @@ Strong emphasis, aka bold, with **asterisks** or **underscores**.
 Combined emphasis with **asterisks and _underscores_**.
 
 Strikethrough uses two tildes. ~~Scratch this.~~
-
-<a name="lists" />
 
 ## Lists
 
@@ -142,8 +137,6 @@ Strikethrough uses two tildes. ~~Scratch this.~~
 * Or minuses
 
 - Or pluses
-
-<a name="links" />
 
 ## Links
 
@@ -187,8 +180,6 @@ Some text to show that the reference links can follow later.
 [1]: http://slashdot.org
 [link text itself]: http://www.reddit.com
 
-<a name="images" />
-
 ## Images
 
 ```no-highlight
@@ -213,8 +204,6 @@ Reference-style:
 
 [logo]: https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png "Logo Title Text 2"
 
-<a name="code" />
-
 ## Code and Syntax Highlighting
 
 Code blocks are part of the Markdown spec, but syntax highlighting isn't. However, many renderers -- like Github's and _Markdown Here_ -- support syntax highlighting. _Markdown Here_ supports highlighting for dozens of languages (and not-really-languages, like diffs and HTTP headers); to see the complete list, and how to write the language names, see the [highlight.js demo page](http://softwaremaniacs.org/media/soft/highlight/test.html).
@@ -227,15 +216,6 @@ Inline `code` has `back-ticks around` it.
 
 Blocks of code are either fenced by lines with three back-ticks <code>```</code>, or are indented with four spaces. I recommend only using the fenced code blocks -- they're easier and only they support syntax highlighting.
 
-<pre lang="no-highlight">
-  <code>
-    ```javascript var s = "JavaScript syntax highlighting"; alert(s); ```
-    ```python s = "Python syntax highlighting" print s ``` ``` No language
-    indicated, so no syntax highlighting. But let's throw in a
-    &lt;b&gt;tag&lt;/b&gt;. ```
-  </code>
-</pre>
-
 ```javascript
 var s = "JavaScript syntax highlighting";
 alert(s);
@@ -246,14 +226,12 @@ s = "Python syntax highlighting"
 print s
 ```
 
-```
+```no-highlight
 No language indicated, so no syntax highlighting in Markdown Here (varies on Github).
 But let's throw in a <b>tag</b>.
 ```
 
 Again, to see what languages are available for highlighting, and how to write those language names, see the [highlight.js demo page](http://softwaremaniacs.org/media/soft/highlight/test.html).
-
-<a name="tables" />
 
 ## Tables
 
@@ -262,11 +240,11 @@ Tables aren't part of the core Markdown spec, but they are part of GFM and _Mark
 ```no-highlight
 Colons can be used to align columns.
 
-| Tables        | Are           | Cool  |
+| Tables        |      Are      |  Cool |
 | ------------- | :-----------: | ----: |
 | col 3 is      | right-aligned | $1600 |
-| col 2 is      | centered      | $12   |
-| zebra stripes | are neat      | $1    |
+| col 2 is      |   centered    |   $12 |
+| zebra stripes |   are neat    |    $1 |
 
 The outer pipes (|) are optional, and you don't need to make the raw Markdown line up prettily. You can also use inline Markdown.
 
@@ -291,8 +269,6 @@ The outer pipes (|) are optional, and you don't need to make the raw Markdown li
 | _Still_  | `renders` | **nicely** |
 | 1        | 2         | 3          |
 
-<a name="blockquotes" />
-
 ## Blockquotes
 
 ```no-highlight
@@ -310,8 +286,6 @@ Quote break.
 Quote break.
 
 > This is a very long line that will still be quoted properly when it wraps. Oh boy let's keep writing to make sure this is long enough to actually wrap for everyone. Oh, you can _put_ **Markdown** into a blockquote.
-
-<a name="html" />
 
 ## Inline HTML
 
@@ -335,11 +309,9 @@ You can also use raw HTML in your Markdown, and it'll mostly work pretty well.
   <dd>Does *not* work **very** well. Use HTML <em>tags</em>.</dd>
 </dl>
 
-<a name="hr" />
-
 ## Horizontal Rule
 
-```
+```no-highlight
 Three or more...
 
 ---
@@ -369,15 +341,13 @@ Asterisks
 
 Underscores
 
-<a name="lines" />
-
 ## Line Breaks
 
 My basic recommendation for learning how line breaks work is to experiment and discover -- hit &lt;Enter&gt; once (i.e., insert one newline), then hit it twice (i.e., insert two newlines), see what happens. You'll soon learn to get what you want. "Markdown Toggle" is your friend.
 
 Here are some things to try out:
 
-```
+```no-highlight
 Here's a line for us to start with.
 
 This line is separated from the one above by two newlines, so it will be a *separate paragraph*.
@@ -394,8 +364,6 @@ This line is also begins a separate paragraph, but...
 This line is only separated by a single newline, so it's a separate line in the _same paragraph_.
 
 (Technical note: _Markdown Here_ uses GFM line breaks, so there's no need to use MD's two-space line breaks.)
-
-<a name="videos" />
 
 ## YouTube Videos
 
