Update sample content.

--- a/content/01-03-2017.mdx
+++ b/content/01-03-2017.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Angels of Mist"
-cover: "6.jpg"
+cover: "https://source.unsplash.com/1600x900/?nature,water?sig=3"
 category: "test3"
 description: "Decsription"
 datePublished: "2017-03-01"
