--- a/content/02-04-2017.mdx
+++ b/content/02-04-2017.mdx
@@ -1,6 +1,6 @@
 ---
 title: "The Fairy's Witches"
-cover: "3.jpg"
+cover: "https://source.unsplash.com/1600x900/?nature,water?sig=5"
 description: "Decsription"
 category: "something"
 datePublished: "2017-04-02"
