--- a/content/23-03-2017.mdx
+++ b/content/23-03-2017.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Birch in the Roses"
-cover: "1.jpg"
+cover: "https://source.unsplash.com/1600x900/?nature,water?sig=7"
 description: "Decsription"
 datePublished: "2017-03-01"
 dateModified: "2017-03-01"
