--- a/content/Big_Sample_Post.mdx
+++ b/content/Big_Sample_Post.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Big Test"
-cover: "5.jpg"
+cover: "https://source.unsplash.com/1600x900/?nature,water?sig=8"
 description: "Decsription"
 category: "moar"
 datePublished: "2018-03-01"
