--- a/content/01-01-2017.mdx
+++ b/content/01-01-2017.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Bold Mage"
-cover: "8.jpg"
+cover: "https://source.unsplash.com/1600x900/?nature,water?sig=1"
 coverAlt: "Bold mage cover"
 description: "Decsription"
 datePublished: "2017-01-01"
