--- a/content/02-03-2017.mdx
+++ b/content/02-03-2017.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Random project 4 With Super Long Title Phase One"
-cover: "4.jpg"
+cover: "https://source.unsplash.com/1600x900/?nature,water?sig=4"
 description: "Decsription"
 category: "random"
 datePublished: "2017-03-02"
