--- a/content/Big_Sample_Post.mdx
+++ b/content/Big_Sample_Post.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Big Test"
-cover: "https://source.unsplash.com/1600x900/?nature,water?sig=8"
+cover: "https://source.unsplash.com/3000x900/?nature,water?sig=8"
+coverAlt: "Big test"
 description: "Decsription"
 category: "moar"
 datePublished: "2018-03-01"
