Add extra test content to the big test.

--- a/content/Big_Sample_Post.mdx
+++ b/content/Big_Sample_Post.mdx
@@ -196,6 +196,10 @@ Reference-style:
 
 [logo]: https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png "Logo Title Text 2"
 
+Big picture:
+
+![big picture that applies to water or nature](https://source.unsplash.com/1600x900/?nature,water)
+
 ## Code and Syntax Highlighting
 
 Code blocks are part of the Markdown spec, but syntax highlighting isn't. However, many renderers -- like Github's and _Markdown Here_ -- support syntax highlighting. _Markdown Here_ supports highlighting for dozens of languages (and not-really-languages, like diffs and HTTP headers); to see the complete list, and how to write the language names, see the [highlight.js demo page](http://softwaremaniacs.org/media/soft/highlight/test.html).
@@ -256,10 +260,10 @@ Colons can be used to align columns.
 
 The outer pipes (|) are optional, and you don't need to make the raw Markdown line up prettily. You can also use inline Markdown.
 
-| Markdown | Less      | Pretty     |
-| -------- | --------- | ---------- |
-| _Still_  | `renders` | **nicely** |
-| 1        | 2         | 3          |
+| Markdown | Less      | Pretty     | Pretty     | Pretty     |
+| -------- | --------- | ---------- | ---------- | ---------- |
+| _Still_  | `renders` | **nicely** | **nicely** | **nicely** |
+| 1        | 2         | 3          | 3          | 3          |
 
 ## Blockquotes
 
