Implement gatsby-plugin-image based image optimization.

--- a/content/01-01-2017.mdx
+++ b/content/01-01-2017.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Bold Mage"
-cover: "https://source.unsplash.com/1600x900/?nature,water?sig=1"
+cover: images/cover_1.jpeg
 coverAlt: "Bold mage cover"
 description: "Decsription"
 datePublished: "2017-01-01"
