--- a/content/01-02-2017.mdx
+++ b/content/01-02-2017.mdx
@@ -1,6 +1,7 @@
 ---
 title: "The Fallen Time"
-cover: "https://source.unsplash.com/1600x900/?nature,water?sig=2"
+cover: images/cover_2.jpeg
+coverAlt: "The Fallen Time Cover"
 description: "Decsription"
 datePublished: "2017-02-01"
 dateModified: "2017-02-01"
