--- a/content/02-03-2017.mdx
+++ b/content/02-03-2017.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Random project 4 With Super Long Title Phase One"
-cover: "https://source.unsplash.com/1600x900/?nature,water?sig=4"
+cover: images/cover_4.jpeg
+coverAlt: "Cover"
 description: "Decsription"
 category: "random"
 datePublished: "2017-03-02"
