--- a/content/17-03-2017.mdx
+++ b/content/17-03-2017.mdx
@@ -1,6 +1,7 @@
 ---
 title: "The Butterfly of the Edge"
-cover: "https://source.unsplash.com/1600x900/?nature,water?sig=6"
+cover: images/cover_6.jpeg
+coverAlt: "The Butterfly of the Edge"
 description: "Decsription"
 category: "tech"
 datePublished: "2017-03-17"
