--- a/content/Big_Sample_Post.mdx
+++ b/content/Big_Sample_Post.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Big Test"
-cover: "https://source.unsplash.com/3000x900/?nature,water?sig=8"
+cover: images/cover_8.jpeg
 coverAlt: "Big test"
 description: "Decsription"
 category: "moar"
@@ -195,6 +195,10 @@ Reference-style:
 ![alt text][logo]
 
 [logo]: https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png "Logo Title Text 2"
+
+Local picture:
+
+![local picture](./images/local_test.jpeg)
 
 Big picture:
 
