--- a/content/01-03-2017.mdx
+++ b/content/01-03-2017.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Angels of Mist"
-cover: "https://source.unsplash.com/1600x900/?nature,water?sig=3"
+cover: images/cover_3.jpeg
+coverAlt: "Angels of Mist cover"
 category: "test3"
 description: "Decsription"
 datePublished: "2017-03-01"
