--- a/content/02-04-2017.mdx
+++ b/content/02-04-2017.mdx
@@ -1,6 +1,7 @@
 ---
 title: "The Fairy's Witches"
-cover: "https://source.unsplash.com/1600x900/?nature,water?sig=5"
+cover: images/cover_5.jpeg
+coverAlt: "The Fairy's Witches Cover"
 description: "Decsription"
 category: "something"
 datePublished: "2017-04-02"
