--- a/content/23-03-2017.mdx
+++ b/content/23-03-2017.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Birch in the Roses"
-cover: "https://source.unsplash.com/1600x900/?nature,water?sig=7"
+cover: images/cover_7.jpeg
+coverAlt: "Birch in the Roses"
 description: "Decsription"
 datePublished: "2017-03-01"
 dateModified: "2017-03-01"
