Implement responsive iframe and video embed support.

--- a/content/Big_Sample_Post.mdx
+++ b/content/Big_Sample_Post.mdx
@@ -380,3 +380,5 @@ Or, in pure Markdown, but losing the image sizing and border:
 ```no-highlight
 [![IMAGE ALT TEXT HERE](http://img.youtube.com/vi/YOUTUBE_VIDEO_ID_HERE/0.jpg)](http://www.youtube.com/watch?v=YOUTUBE_VIDEO_ID_HERE)
 ```
+
+`video: https://www.youtube.com/watch?v=vRwp--RoJdo`
