Improve the sample content of the advanced theme.

--- a/themes/advanced/content/01-02-2017.mdx
+++ b/themes/advanced/content/01-02-2017.mdx
@@ -2,7 +2,7 @@
 title: "The Fallen Time"
 cover: images/cover_2.jpeg
 coverAlt: "The Fallen Time Cover"
-description: "Decsription"
+description: "Description"
 datePublished: "2017-02-01"
 dateModified: "2017-02-01"
 category: "another one"
