--- a/themes/advanced/content/01-03-2017.mdx
+++ b/themes/advanced/content/01-03-2017.mdx
@@ -2,8 +2,8 @@
 title: "Angels of Mist"
 cover: images/cover_3.jpeg
 coverAlt: "Angels of Mist cover"
-category: "test3"
-description: "Decsription"
+category: "test"
+description: "Description"
 datePublished: "2017-03-01"
 dateModified: "2017-03-01"
 tags:
