--- a/themes/advanced/content/02-03-2017.mdx
+++ b/themes/advanced/content/02-03-2017.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Random project 4 With Super Long Title Phase One"
+title: "Random project 4"
 cover: images/cover_4.jpeg
 coverAlt: "Cover"
-description: "Decsription"
+description: "Description"
 category: "random"
 datePublished: "2017-03-02"
 dateModified: "2017-03-02"
