--- a/themes/advanced/content/02-04-2017.mdx
+++ b/themes/advanced/content/02-04-2017.mdx
@@ -2,8 +2,8 @@
 title: "The Fairy's Witches"
 cover: images/cover_5.jpeg
 coverAlt: "The Fairy's Witches Cover"
-description: "Decsription"
-category: "something"
+description: "Description"
+category: "test"
 datePublished: "2017-04-02"
 dateModified: "2017-04-02"
 ---
