--- a/themes/advanced/content/17-03-2017.mdx
+++ b/themes/advanced/content/17-03-2017.mdx
@@ -2,7 +2,7 @@
 title: "The Butterfly of the Edge"
 cover: images/cover_6.jpeg
 coverAlt: "The Butterfly of the Edge"
-description: "Decsription"
+description: "Description"
 category: "tech"
 datePublished: "2017-03-17"
 dateModified: "2017-03-17"
