--- a/themes/advanced/content/23-03-2017.mdx
+++ b/themes/advanced/content/23-03-2017.mdx
@@ -2,7 +2,7 @@
 title: "Birch in the Roses"
 cover: images/cover_7.jpeg
 coverAlt: "Birch in the Roses"
-description: "Decsription"
+description: "Description"
 datePublished: "2017-03-01"
 dateModified: "2017-03-01"
 category: "tech"
