--- a/themes/advanced/content/Big_Sample_Test.mdx
+++ b/themes/advanced/content/Big_Sample_Test.mdx
@@ -1,18 +1,19 @@
 ---
 title: "Big Test"
-cover: images/cover_8.jpeg
+cover: images/big_test.jpeg
 coverAlt: "Big test"
-description: "Decsription"
-category: "moar"
-datePublished: "2018-03-01"
-dateModified: "2018-03-01"
-slug: "Big-Sample_Test"
+description: "A big test intended for checking the MDX rendering."
+datePublished: "2021-08-01"
+dateModified: "2021-08-01"
+slug: "Big_Sample_Test"
+category: "Tech"
 tags:
   - test
-  - huge
+  - markdown
+  - big
 ---
 <!-- markdownlint-disable-->
-## NOTE: This "post" is based on [Markdown Cheatsheet](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet) and is meant to test styling of Markdown generated documents.
+NOTE: This "post" is based on [Markdown Cheatsheet](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet) and is meant to test styling of Markdown generated documents.
 
 This is intended as a quick reference and showcase. For more complete info, see [John Gruber's original spec](http://daringfireball.net/projects/markdown/) and the [Github-flavored Markdown info page](http://github.github.com/github-flavored-markdown/).
 
