--- a/themes/advanced/content/01-01-2017.mdx
+++ b/themes/advanced/content/01-01-2017.mdx
@@ -2,11 +2,10 @@
 title: "Bold Mage"
 cover: images/cover_1.jpeg
 coverAlt: "Bold mage cover"
-description: "Decsription"
+description: "Description"
 datePublished: "2017-01-01"
 dateModified: "2017-01-01"
 category: "tech"
-disqus_category_id: 123
 tags:
   - programming
   - stuff
