Fix tag/category feed URL inconsistencies caused by casing loss due to kebabCase conversion.

--- a/themes/advanced/content/Big_Sample_Test.mdx
+++ b/themes/advanced/content/Big_Sample_Test.mdx
@@ -6,7 +6,7 @@ description: "A big test intended for checking the MDX rendering."
 datePublished: "2021-08-01"
 dateModified: "2021-08-01"
 slug: "Big_Sample_Test"
-category: "Tech"
+category: "tech"
 tags:
   - test
   - markdown
