Fix accessibility issues in gatsby-theme-advanced and gatsby-advanced-demo.

--- a/themes/advanced/content/02-03-2017.mdx
+++ b/themes/advanced/content/02-03-2017.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Random project 4"
 cover: images/cover_4.jpeg
-coverAlt: "Cover"
+coverAlt: "An image tagged as nature and water."
 description: "Description"
 category: "random"
 datePublished: "2017-03-02"
