--- a/themes/advanced/content/Big_Sample_Test.mdx
+++ b/themes/advanced/content/Big_Sample_Test.mdx
@@ -1,13 +1,14 @@
 ---
 title: "Big Test"
 cover: images/big_test.jpeg
-coverAlt: "Big test"
+coverAlt: "An image tagged as nature and water."
 description: "A big test intended for checking the MDX rendering."
 datePublished: "2021-08-01"
 dateModified: "2021-08-01"
 slug: "Big_Sample_Test"
 category: "tech"
 tags:
+  - programming
   - test
   - markdown
   - big
@@ -382,4 +383,4 @@ Or, in pure Markdown, but losing the image sizing and border:
 [![IMAGE ALT TEXT HERE](http://img.youtube.com/vi/YOUTUBE_VIDEO_ID_HERE/0.jpg)](http://www.youtube.com/watch?v=YOUTUBE_VIDEO_ID_HERE)
 ```
 
-`video: https://www.youtube.com/watch?v=vRwp--RoJdo`
+`video: [VoiceBot Demo](https://www.youtube.com/watch?v=vRwp--RoJdo)`
