--- a/themes/advanced/content/01-01-2017.mdx
+++ b/themes/advanced/content/01-01-2017.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Bold Mage"
 cover: images/cover_1.jpeg
-coverAlt: "Bold mage cover"
+coverAlt: "An image tagged as nature and water."
 description: "Description"
 datePublished: "2017-01-01"
 dateModified: "2017-01-01"
