--- a/themes/advanced/content/01-02-2017.mdx
+++ b/themes/advanced/content/01-02-2017.mdx
@@ -1,7 +1,7 @@
 ---
 title: "The Fallen Time"
 cover: images/cover_2.jpeg
-coverAlt: "The Fallen Time Cover"
+coverAlt: "An image tagged as nature and water."
 description: "Description"
 datePublished: "2017-02-01"
 dateModified: "2017-02-01"
