--- a/themes/advanced/content/01-03-2017.mdx
+++ b/themes/advanced/content/01-03-2017.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Angels of Mist"
 cover: images/cover_3.jpeg
-coverAlt: "Angels of Mist cover"
+coverAlt: "An image tagged as nature and water."
 category: "test"
 description: "Description"
 datePublished: "2017-03-01"
