--- a/themes/advanced/content/01-07-2021.mdx
+++ b/themes/advanced/content/01-07-2021.mdx
@@ -1,7 +1,7 @@
 ---
 title: "The Forgotten Eye"
 cover: images/cover_1.jpeg
-coverAlt: "The Forgotten Eye"
+coverAlt: "An image tagged as nature and water."
 description: "Description"
 datePublished: "2021-03-01"
 dateModified: "2021-03-01"
