--- a/themes/advanced/content/02-04-2017.mdx
+++ b/themes/advanced/content/02-04-2017.mdx
@@ -1,7 +1,7 @@
 ---
 title: "The Fairy's Witches"
 cover: images/cover_5.jpeg
-coverAlt: "The Fairy's Witches Cover"
+coverAlt: "An image tagged as nature and water."
 description: "Description"
 category: "test"
 datePublished: "2017-04-02"
