--- a/themes/advanced/content/02-07-2021.mdx
+++ b/themes/advanced/content/02-07-2021.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Slave of Darkness"
 cover: images/cover_2.jpeg
-coverAlt: "Slave of Darkness"
+coverAlt: "An image tagged as nature and water."
 description: "Description"
 datePublished: "2021-04-01"
 dateModified: "2021-04-01"
