--- a/themes/advanced/content/03-07-2021.mdx
+++ b/themes/advanced/content/03-07-2021.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Stone of Time"
 cover: images/cover_3.jpeg
-coverAlt: "Stone of Time"
+coverAlt: "An image tagged as nature and water."
 description: "Description"
 datePublished: "2021-05-01"
 dateModified: "2021-05-01"
