--- a/themes/advanced/content/04-07-2021.mdx
+++ b/themes/advanced/content/04-07-2021.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Flames in the Time"
 cover: images/cover_4.jpeg
-coverAlt: "Flames in the Time"
+coverAlt: "An image tagged as nature and water."
 description: "Description"
 datePublished: "2021-06-01"
 dateModified: "2021-06-01"
