--- a/themes/advanced/content/05-07-2021.mdx
+++ b/themes/advanced/content/05-07-2021.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Valley in the Storms"
 cover: images/cover_5.jpeg
-coverAlt: "Valley in the Storms"
+coverAlt: "An image tagged as nature and water."
 description: "Description"
 datePublished: "2021-07-01"
 dateModified: "2021-07-01"
