--- a/themes/advanced/content/06-07-2021.mdx
+++ b/themes/advanced/content/06-07-2021.mdx
@@ -1,7 +1,7 @@
 ---
 title: "The Darkest Something"
 cover: images/cover_6.jpeg
-coverAlt: "The Darkest Something"
+coverAlt: "An image tagged as nature and water."
 description: "Description"
 datePublished: "2021-07-01"
 dateModified: "2021-07-01"
