--- a/themes/advanced/content/07-07-2021.mdx
+++ b/themes/advanced/content/07-07-2021.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Storms of Doors"
 cover: images/cover_7.jpeg
-coverAlt: "Storms of Doors"
+coverAlt: "An image tagged as nature and water."
 description: "Description"
 datePublished: "2021-07-02"
 dateModified: "2021-07-02"
