--- a/themes/advanced/content/17-03-2017.mdx
+++ b/themes/advanced/content/17-03-2017.mdx
@@ -1,7 +1,7 @@
 ---
 title: "The Butterfly of the Edge"
 cover: images/cover_6.jpeg
-coverAlt: "The Butterfly of the Edge"
+coverAlt: "An image tagged as nature and water."
 description: "Description"
 category: "tech"
 datePublished: "2017-03-17"
