Update sample content.

--- a/themes/advanced/content/Big_Sample_Test.mdx
+++ b/themes/advanced/content/Big_Sample_Test.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Big Test"
 cover: images/big_test.jpeg
-coverAlt: "An image tagged as nature and water."
+coverAlt: "An image tagged as nature and water for the big test."
 description: "A big test intended for checking the MDX rendering."
 datePublished: "2021-08-01"
 dateModified: "2021-08-01"
