Update sample content of the advanced theme.

--- a/themes/advanced/content/Big_Sample_Test.mdx
+++ b/themes/advanced/content/Big_Sample_Test.mdx
@@ -26,18 +26,29 @@ You can play around with Markdown on our [live demo page](http://www.markdown-he
 
 ## Table of Contents
 
-[Headers](#headers)
-[Emphasis](#emphasis)
-[Lists](#lists)
-[Links](#links)
-[Images](#images)
-[Code and Syntax Highlighting](#code)
-[Tables](#tables)
-[Blockquotes](#blockquotes)
-[Inline HTML](#html)
-[Horizontal Rule](#hr)
-[Line Breaks](#lines)
-[YouTube Videos](#videos)
+- [Headers](#headers)
+
+- [Emphasis](#emphasis)
+
+- [Lists](#lists)
+
+- [Links](#links)
+
+- [Images](#images)
+
+- [Code and Syntax Highlighting](#code-and-syntax-highlighting)
+
+- [Tables](#tables)
+
+- [Blockquotes](#blockquotes)
+
+- [Inline HTML](#inline-html)
+
+- [Horizontal Rule](#horizontal-rule)
+
+- [Line Breaks](#line-breaks)
+
+- [YouTube Videos](#you-tube-videos)
 
 ## Headers
 
