--- a/content/01-01-2020 SGB#01.mdx
+++ b/content/01-01-2020 SGB#01.mdx
@@ -1,5 +1,5 @@
 ---
-title: "O JOGO SUJO - SGB#01"
+title: "O jogo sujo - SGB#01"
 cover: images/sgb-01-folheto.jpg
 coverAlt: "Folheto"
 description: "descripton"
