--- a/content/01-01-2020 SGB#03.mdx
+++ b/content/01-01-2020 SGB#03.mdx
@@ -1,5 +1,5 @@
 ---
-title: "TAXAS DE JUROS ABUSIVAS - SGB#03"
+title: "Taxas de Juros Abusivas - SGB#03"
 cover: images/sgb-03-cartões.jpg
 coverAlt: "dívidas"
 description: "dd"
