--- a/content/01-01-2020 SGB#04.mdx
+++ b/content/01-01-2020 SGB#04.mdx
@@ -1,5 +1,5 @@
 ---
-title: "VOCÊ SE SENTE ASSIM? - SGB#04"
+title: "Você se sente assim? - SGB#04"
 cover: images/sgb-04-burocrata.jpg
 coverAlt: "Um burocrata"
 description: "dd"
