--- a/content/01-01-2020 SGB#06.mdx
+++ b/content/01-01-2020 SGB#06.mdx
@@ -1,5 +1,5 @@
 ---
-title: "SERVIÇOS ESSENCIAIS - SGB#06"
+title: "Serviços essenciais - SGB#06"
 cover: images/sgb-06-reserva.jpg
 coverAlt: "dívidas"
 description: "dd"
