--- a/content/01-01-2020 SGB#05.mdx
+++ b/content/01-01-2020 SGB#05.mdx
@@ -1,5 +1,5 @@
 ---
-title: "VOCÊ NÃO PRECISA PAGAR TARIFA DE MANUTENÇÃO DE CONTA - SGB#05"
+title: "Você não precisa pagar tarifa de manuntenção de conta - SGB#05"
 cover: images/sgb-05-cupom.jpg
 coverAlt: "dívidas"
 description: "dd"
