bug fix - page width

--- a/content/01-01-2020 SGB#05.mdx
+++ b/content/01-01-2020 SGB#05.mdx
@@ -13,13 +13,17 @@ tags:
 ---
 
 ## A maioria das pessoas simplesmente não sabem dessa informação e os bancos se aproveitam disso para que a gente contrate um pacote de serviços.
-Eu passei 7 anos da minha vida pagando por um pacote de serviço o qual eu não usava praticamente nada dele (o que eu usava estava disponível em um pacote gratuito que eu nem sequer sabia que existia).
+Eu passei 7 anos da minha vida pagando por um pacote de serviço o qual
+ eu não usava praticamente nada dele 
+ (o que eu usava estava disponível em um pacote gratuito que eu nem sequer sabia que existia).
 
 7 anos!!! São 84 meses dando dinheiro pro banco à toa.
 link van https://www.santander.com.br/tarifas-e-pacotes-pessoa-fisica?ic=solucaopravc-tarifasepacotespf
 consultar https://www.santander.com.br/tarifas-e-pacotes-pessoa-fisica?ic=solucaopravc-tarifasepacotespf
 
-Eu pagava o Pacote de Serviços Van Gogh do Banco Santander. E eu me sentia todo privilegiado por ser cliente Van Gogh e tal... Por eu ser militar da FAB havia um convenio pra eu pagar só 50% do valor do pacote. Não pegava filas quando ia na agencia falar com o gerente, podia fazer 2 TEDs por mês para qualquer outro banco sem pagar a tarifa de 7,90 etc...
+Eu pagava o Pacote de Serviços Van Gogh do Banco Santander. 
+E eu me sentia todo privilegiado por ser cliente Van Gogh e tal... 
+Por eu ser militar da FAB havia um convenio pra eu pagar só 50% do valor do pacote. Não pegava filas quando ia na agencia falar com o gerente, podia fazer 2 TEDs por mês para qualquer outro banco sem pagar a tarifa de 7,90 etc...
 
 Oooohh... grandes m*. O pacote Van Gogh custa R$69,90 por mês. Eu pagava R$34,95 todo mês. (você pode consultar clicando aqui)
 
@@ -34,14 +38,16 @@ Aqui tem de outros bancos:
 > Pacote de Serviços Bradesco https://banco.bradesco/html/classic/produtos-servicos/tarifas/index.shtm
 > Pacote de Serviços Caixa http://www.caixa.gov.br/voce/contas/cesta-de-servicos/Paginas/default.aspx
 
-Pois é né... depois desse tempo todo eu descobri que eu poderia fazer uma simples ligação pro meu Bancão e solicitar que alterassem meu pacote de serviço para Serviços Essenciais
+Pois é né... depois desse tempo todo eu descobri que eu poderia fazer uma 
+simples ligação pro meu Bancão e solicitar que alterassem meu pacote de serviço para Serviços Essenciais
 
 ## O nome desse pacote gratuito é: Pacote de Serviços Essenciais
 
 Você não precisa mais pagar tarifas de conta bancária e nem anuidade de cartão de crédito.
 Ele é definido pelo Banco Central. 
 
-Os Bancos, por lei, são obrigados a te fornecer esse pacote. Gratuidades estabelecidas pelo art. 2º da Resolução 3.919, de 25 de novembro de 2010. 
+Os Bancos, por lei, são obrigados a te fornecer esse pacote. 
+Gratuidades estabelecidas pelo art. 2º da Resolução 3.919, de 25 de novembro de 2010. 
 
 Em geral o Pacote de Serviços Essenciais se resume em:
 • 4 saques gratuitos
@@ -51,10 +57,12 @@ Em geral o Pacote de Serviços Essenciais se resume em:
 Excedendo esses limites serão cobradas tarifas definida
 por cada banco. 
 
-PS: Vem cá... Dificilmente você faz mais que isso. E se faz, tenho uma alternativa que vai te animar: Abrir conta em uma Bancos Digital. 
+PS: Vem cá... Dificilmente você faz mais que isso. E se faz, 
+tenho uma alternativa que vai te animar: Abrir conta em uma Bancos Digital. 
 
 Ao se cadastrar na minha lista você receberá de presente um e-book o qual aprofundo esse assunto.
 
-Se quiser mais detalhes sobre o pacote de serviços essências, dá uma olhada nas tabelas disponível nesse link: >Serviços Essenciais Banco Central<
+Se quiser mais detalhes sobre o pacote de serviços essências, 
+dá uma olhada nas tabelas disponível nesse link: >Serviços Essenciais Banco Central<
 https://www.bcb.gov.br/estabilidadefinanceira/tarifas3594
 
