--- a/content/posts/teste-no-forestry.mdx
+++ b/content/posts/teste-no-forestry.mdx
@@ -13,4 +13,4 @@ datepublished: 2021-09-30T00:00:00-03:00
 ---
 textoi textyxzx\\zs
 
-![](/images/sgb-05-cupom.jpg)
+![](../images/sgb-05-cupom.jpg)
