--- a/content/posts/teste-no-forestry.mdx
+++ b/content/posts/teste-no-forestry.mdx
@@ -2,13 +2,13 @@
 tags:
 - tag1
 - tag2
-dateModified: 2021-09-27
+dateModified: "2021-09-27"
 title: Teste no Forestry
 category: cat1
 cover: "../images/sgb-04-burocrata.jpg"
 coverAlt: alt
 description: desc
-datepublished: 2021-09-30
+datePublished: "2021-09-30"
 
 ---
 textoi textyxzx\\zs
