--- a/content/posts/teste-no-forestry.mdx
+++ b/content/posts/teste-no-forestry.mdx
@@ -8,7 +8,7 @@ category: cat1
 cover: "../images/sgb-04-burocrata.jpg"
 coverAlt: alt
 description: desc
-datepublished: '2021-09-30'
+datePublished: '2021-09-30'
 
 ---
 textoi textyxzx\\zs
