--- a/content/posts/teste-2.mdx
+++ b/content/posts/teste-2.mdx
@@ -2,8 +2,8 @@
 tags:
 - tag1
 - tag2
-dateModified: ! '"28/09/2021"'
-datePublished: ! '"28/09/2021"'
+dateModified: 28/09/2021
+datePublished: 28/09/2021
 title: Teste 2
 category: cat1
 cover: "../images/sgb-06-reserva.jpg"
