--- a/content/posts/teste-no-forestry.mdx
+++ b/content/posts/teste-no-forestry.mdx
@@ -13,4 +13,4 @@ datePublished: '2021-09-30'
 ---
 textoi textyxzx\\zs
 
-![desc](content/images/sgb-06-reserva.jpg "alt text")
+![desc](../images/sgb-06-reserva.jpg "alt text")
