--- a/content/posts/01-01-2020 SGB#05.md
+++ b/content/posts/01-01-2020 SGB#05.md
@@ -1,6 +1,6 @@
 ---
 title: "Você não precisa pagar tarifa de manuntenção de conta - SGB#05"
-cover: images/sgb-05-cupom.jpg
+cover: ../images/sgb-05-cupom.jpg
 coverAlt: "dívidas"
 description: "dd"
 datePublished: "2020-03-27"
