--- a/content/posts/01-01-2020 SGB#06.mdx
+++ b/content/posts/01-01-2020 SGB#06.mdx
@@ -1,10 +1,10 @@
 ---
 title: Serviços essenciais - SGB#06
-cover: images/sgb-06-reserva.jpg
+cover: ../images/sgb-06-reserva.jpg
 coverAlt: dívidas
 description: dd
 datePublished: '2020-04-12'
-dateModified: 2021-04-12
+dateModified: '2021-04-12'
 category: economia
 tags:
 - bancos
