--- a/content/posts/o-bizu-para-juntar-dinheiro-mais-facil.mdx
+++ b/content/posts/o-bizu-para-juntar-dinheiro-mais-facil.mdx
@@ -6,7 +6,7 @@ tags:
 dateModified: 2021-09-28 2:57 PM
 datePublished: 2021-09-28 2:57 PM
 title: O BIZU PARA JUNTAR DINHEIRO MAIS FÁCIL
-cover: ../images/combatente-rico-diego-ayres-finacas-para-militares-juntar-dinheiro.png
+cover: "../images/combatente-rico-diego-ayres-finacas-para-militares-juntar-dinheiro.png"
 coverAlt: Infográfico com a técnica IMBEL para juntar dinheiro mais fácil
 description: Infográfico com a técnica IMBEL para juntar dinheiro mais fácil
 category: Controle e Planejamento Financeiro
